--- a/RobotWar.spritebuilder/Source/libs/cocos2d-iphone/external/Chipmunk/msvc/glfw/readme.html
+++ b/RobotWar.spritebuilder/Source/libs/cocos2d-iphone/external/Chipmunk/msvc/glfw/readme.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title>GLFW Readme File</title>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<title>GLFW Readme File</title>
 </head>
-
 <body>
 
 <h1>GLFW 2.7.9 Win32 binary distribution</h1>
 
 <ol>
- <li><a href="#intro">Introduction</a></li>
+<li><a href="#intro">Introduction</a></li>
  <li><a href="#using">Using GLFW</a></li>
  <li><a href="#changelog">Version history</a></li>
  <li><a href="#structure">Directory structure of the GLFW distribution</a></li>
  <li><a href="#contact">Contacting the project</a></li>
  <li><a href="#credits">Acknowledgements</a></li>
 </ol>
-
 <a name="intro"></a>
 <h2>1. Introduction</h2>
 
@@ -42,12 +40,11 @@ the runtimes of a number of common Windows compilers.  More specifically, it
 contains files for the following compilers:</p>
 
 <ul>
-  <li>MinGW</li>
+<li>MinGW</li>
   <li>Visual C++ 2008 (release runtime)</li>
   <li>Visual C++ 2010 (release runtime)</li>
   <li>Visual C++ 2012 (release runtime)</li>
 </ul>
-  
 <p>For the full source distribition, go to the
 <a href="http://www.glfw.org/">GLFW website</a> or to the
 <a href="http://sourceforge.net/projects/glfw/">project page</a> on SF.net.</p>
@@ -59,10 +56,9 @@ contains files for the following compilers:</p>
 <p>There are two aspects to using GLFW:</p>
 
 <ol>
-  <li>How does the GLFW API work</li>
+<li>How does the GLFW API work</li>
   <li>How to compile programs that use GLFW</li>
 </ol>
-
 <p>The first point is covered in the
 <a href="docs/UsersGuide.pdf">GLFW Users Guide</a> and the
 <a href="docs/Reference.pdf">GLFW Reference Manual</a>, and we suggest that you
@@ -103,8 +99,9 @@ avoid this, define <code>GLFW_NO_GLU</code> before the inclusion of the GLFW
 header.</p>
 
 <p>In other words:
+</p>
 <ul>
-  <li>Do <em>not</em> include <code>gl.h</code> or <code>glu.h</code>
+<li>Do <em>not</em> include <code>gl.h</code> or <code>glu.h</code>
       yourself, as GLFW does this for you</li>
   <li>Do <em>not</em> include <code>windows.h</code> unless you need
       direct access to the Windows API</li>
@@ -112,7 +109,6 @@ header.</p>
       <em>before</em> including <code>GL/glfw.h</code>.  The GLFW header will
       detect this and act appropriately.</li>
 </ul>
-
 <p>Also note that if you are using an OpenGL extension loading library such as
 <a href="http://glew.sourceforge.net/">GLEW</a>, you should include the GLEW
 header <em>before</em> the GLFW one.  The GLEW header defines macros that
@@ -135,38 +131,36 @@ linked with by default by your compiler. In the table below you can see the
 minimum required link options for each supported Windows compiler (you may want
 to add other libraries as well, such as <code>glu32</code>):</p>
 
-<table border=1>
-  <tr>
-    <td><b>Compiler</b></td>
+<table border="1">
+<tr>
+<td><b>Compiler</b></td>
     <td><b>Link options</b></td>
   </tr>
-  <tr>
-    <td>Borland C++ Builder</td>
+<tr>
+<td>Borland C++ Builder</td>
     <td><code>glfw.lib opengl32.lib</code></td>
   </tr>
-  <tr>
-    <td>Cygwin</td>
+<tr>
+<td>Cygwin</td>
     <td><i>See Unix static library below</i></td>
   </tr>
-  <tr>
-    <td>LCC-Win32</td>
+<tr>
+<td>LCC-Win32</td>
     <td><code>glfw.lib opengl32.lib</code></td>
   </tr>
-  <tr>
-    <td>Microsoft Visual C++</td>
+<tr>
+<td>Microsoft Visual C++</td>
     <td><code>glfw.lib opengl32.lib</code></td>
   </tr>
-  <tr>
-    <td>MinGW and MinGW-w64</td>
+<tr>
+<td>MinGW and MinGW-w64</td>
     <td><code>-lglfw -lopengl32</code></td>
   </tr>
-  <tr>
-    <td>OpenWatcom</td>
+<tr>
+<td>OpenWatcom</td>
     <td><code>glfw.lib opengl32.lib user32.lib</code></td>
   </tr>
 </table>
-
-
 <h4>2.2.2 Windows DLL</h4>
 
 <p>To compile a program that uses the DLL version of GLFW, you need to
@@ -183,39 +177,36 @@ In the table below you can see the minimum required link options for each
 supported Windows compiler (you may want to add other libraries as well,
 such as <code>opengl32</code> and <code>glu32</code>):</p>
 
-<table border=1>
-  <tr>
-    <td><b>Compiler</b></td>
+<table border="1">
+<tr>
+<td><b>Compiler</b></td>
     <td><b>Link options</b></td>
   </tr>
-  <tr>
-    <td>Borland C++ Builder</td>
+<tr>
+<td>Borland C++ Builder</td>
     <td><code>glfwdll.lib</code></td>
   </tr>
-  <tr>
-    <td>Cygwin</td>
+<tr>
+<td>Cygwin</td>
     <td><code>-lglfwdll</code></td>
   </tr>
-  <tr>
-    <td>LCC-Win32</td>
+<tr>
+<td>LCC-Win32</td>
     <td><code>glfwdll.lib</code></td>
   </tr>
-  <tr>
-    <td>Microsoft Visual C++</td>
+<tr>
+<td>Microsoft Visual C++</td>
     <td><code>glfwdll.lib</code></td>
   </tr>
-  <tr>
-    <td>MinGW and MinGW-w64</td>
+<tr>
+<td>MinGW and MinGW-w64</td>
     <td><code>-lglfwdll</code></td>
   </tr>
-  <tr>
-    <td>OpenWatcom</td>
+<tr>
+<td>OpenWatcom</td>
     <td><code>glfwdll.lib</code></td>
   </tr>
 </table>
-
-
-
 <h4>2.2.3 Unix static library</h4>
 
 <p>GLFW supports
@@ -244,6 +235,7 @@ may look like this:</p>
 <p>When compiling and linking a program under Mac OS X that uses GLFW, you
 must also link with Cocoa and OpenGL frameworks.
 
+</p>
 <p>If you are using Xcode, you simply add the GLFW library <code>libglfw.a</code> and
 these frameworks to your project. If, however, you are building your program
 from the command-line, there are two methods for correctly linking your GLFW
@@ -280,29 +272,47 @@ version of GLFW.</p>
 
 <h3>v2.7.9</h3>
 <ul>
-  <li>[Cocoa] Bugfix: The dynamic library makefile rule did not use <code>LFLAGS</code></li>
+<li>[Cocoa] Bugfix: The dynamic library makefile rule did not use <code>LFLAGS</code>
+</li>
   <li>[Win32] Bugfix: Enabling or disabling the cursor for an inactive window did nothing (backported from 3.0)</li>
   <li>[Win32] Bugfix: The locked cursor was re-centered when the window was inactive (backported from 3.0)</li>
   <li>[Win32] Bugfix: The cursor clip rectangle included the title bar (backported from 3.0)</li>
 </ul>
-
-
 <a name="structure"></a>
 <h2>4. Directory structure of the GLFW distribution</h2>
 
 <p>Here is an overview of the directory structure of the GLFW distribution:</p>
 
-<table border=0 cellspacing=0>
-<tr valign="top"><td width=100><code>docs</code></td><td>GLFW manuals in PDF format</td></tr>
-<tr valign="top"><td><code>include</code></td><td>&nbsp;</td></tr>
-<tr valign="top"><td><code>&nbsp;&nbsp;&nbsp;GL</code></td><td>The GLFW C/C++ include file</td></tr>
-<tr valign="top"><td><code>lib-mingw</code></td><td>Binaries for MinGW</td></tr>
-<tr valign="top"><td><code>lib-msvc90</code></td><td>Binaries for Visual C++ 2008 release configuration</td></tr>
-<tr valign="top"><td><code>lib-msvc100</code></td><td>Binaries for Visual C++ 2010 release configuration</td></tr>
-<tr valign="top"><td><code>lib-msvc110</code></td><td>Binaries for Visual C++ 2012 release configuration</td></tr>
+<table border="0" cellspacing="0">
+<tr valign="top">
+<td width="100"><code>docs</code></td>
+<td>GLFW manuals in PDF format</td>
+</tr>
+<tr valign="top">
+<td><code>include</code></td>
+<td>&nbsp;</td>
+</tr>
+<tr valign="top">
+<td><code>&nbsp;&nbsp;&nbsp;GL</code></td>
+<td>The GLFW C/C++ include file</td>
+</tr>
+<tr valign="top">
+<td><code>lib-mingw</code></td>
+<td>Binaries for MinGW</td>
+</tr>
+<tr valign="top">
+<td><code>lib-msvc90</code></td>
+<td>Binaries for Visual C++ 2008 release configuration</td>
+</tr>
+<tr valign="top">
+<td><code>lib-msvc100</code></td>
+<td>Binaries for Visual C++ 2010 release configuration</td>
+</tr>
+<tr valign="top">
+<td><code>lib-msvc110</code></td>
+<td>Binaries for Visual C++ 2012 release configuration</td>
+</tr>
 </table>
-
-
 <a name="contact"></a>
 <h2>5. Contacting the project</h2>
 
@@ -332,8 +342,7 @@ or you could join us on <code>#glfw</code>.
 their skills.  Special thanks go out to:</p>
 
 <ul>
-
-  <li>artblanc, for a patch replacing a deprecated Core Graphics call</li>
+<li>artblanc, for a patch replacing a deprecated Core Graphics call</li>
 
   <li>Bobyshev Alexander and Martins Mozeiko, for the original proposal of
   an FSAA hint and their work on the Win32 implementation of FSAA</li>
@@ -391,13 +400,13 @@ their skills.  Special thanks go out to:</p>
 
   <li>Kenneth Miller, for his many and detailed bug reports on Win32</li>
 
-  <li>Jeff Molofee, the author of the excellent OpenGL tutorials at <a
-  href="http://nehe.gamedev.net/">NeHe Productions</a>.
+  <li>Jeff Molofee, the author of the excellent OpenGL tutorials at <a href="http://nehe.gamedev.net/">NeHe Productions</a>.
   Much of the Windows code of GLFW was originally based on Jeff's
   code</li>
 
   <li>Douglas C. Schmidt and Irfan Pyarali, for their excellent article
-  <a href="http://www.cs.wustl.edu/~schmidt/win32-cv-1.html">Strategies for Implementing POSIX Condition Variables on Win32</a></li>
+  <a href="http://www.cs.wustl.edu/~schmidt/win32-cv-1.html">Strategies for Implementing POSIX Condition Variables on Win32</a>
+</li>
 
   <li>Sebastian Schuberth, for the OpenWatcom makefiles</li>
 
@@ -433,9 +442,9 @@ their skills.  Special thanks go out to:</p>
 
   <li>Santi Zupancic, for support, bug reports and testing</li>
 
-  <li>Lasse Öörni, for submitting patches for the input code of the Win32 and X11 ports</li>
+  <li>Lasse &Ouml;&ouml;rni, for submitting patches for the input code of the Win32 and X11 ports</li>
 
-  <li>Дмитри Малышев, for the idea of a GLFW_NO_GLU macro</li>
+  <li>&#1044;&#1084;&#1080;&#1090;&#1088;&#1080; &#1052;&#1072;&#1083;&#1099;&#1096;&#1077;&#1074;, for the idea of a GLFW_NO_GLU macro</li>
 
   <li>blanco, for submitting a patch for a deprecation bug in the Cocoa port</li>
 
@@ -455,11 +464,11 @@ their skills.  Special thanks go out to:</p>
   <li>All the unmentioned and anonymous contributors in the GLFW community, for
   bug reports, patches, feedback and encouragement</li>
 
-  <li><a href="http://www.opengl.org/">OpenGL.org</a>, and all the people on
+  <li>
+<a href="http://www.opengl.org/">OpenGL.org</a>, and all the people on
   the discussion forums there that have provided help during the development of
   GLFW</li>
 
 </ul>
-
 </body>
 </html>
